solc_ossfuzz_seed_corpus/test_sol/test_f461547c0bad75e95a9be1b4c1ecd307d6988fb1253582e31422e53d1a3b410c_a0b3c07348bc80f11972be92af9c50019718ef40_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0(int16 i0,uint216 i1) external    returns(bytes memory o0,uint192 o1,string memory o2)
  {
  }
  function f1(int224 i0,address i1) public   
  {
  }
  type T0 is int48;
  error er0(bool ep0);
  function f2(uint80 i0,int192 i1) private    returns(string memory o0)
  {
  }
  type T1 is address payable;
  modifier m0(bool i0) 
  {
    _;
    _;
    _;
  }
  function f3() external  m0(false)  returns(uint8 o0,function (int192) internal   returns (int248, string memory, L0.T0) o1,L0.T1 o2)
  {
    return ((((((uint8(int8(43)) | uint8(0)) & uint8(205)) ** uint216(uint216(37826753744252461305647845474507465002266169570944029570753402932))) ** uint56(uint56(0))) | uint8(174)), o1, L0.T1.wrap(payable(address(0x0000000000000000000000000000000000000003))));
  }
  modifier m1(uint256 i0,uint168 i1) 
  {
    if (false)
    {
      (string memory l0) = f2({i0: (uint80(680377958343132334606529) ^ (~(((uint80((uint80(0) / uint80(0))) >> uint72(uint72(4722366482869645213695))) - uint80(104286783758390836200510))))), i1: (~(int192(0)))});
      _;
    }
    else if (false)
    {
    }
    else if (false)
    {
    }
  }
  modifier m2(bool i0) 
  {
    if ((bytes3(0x39bc70) > bytes1(0xe0)))
    {
      _;
    }
    else
    {
      _;
    }
    _;
  }
  modifier m3() 
  {
    _;
    (string memory l0) = f2({i0: (((((uint32(0) << uint216(uint216(105312291668557186697918027683670432318895095400549111254310977535))) ** uint64(uint64(0))) % uint80(1042115467315810877809575)) + uint80(1208925819614629174706175)) * uint80(625115280665523050392352)), i1: int192(-2405130870623784461868916869444226143206304382541876425579)});
  }
  function f4() public    returns(uint248 o0,function (uint80, function (int88, bytes22) external   returns (string memory, int232, address payable), uint32) external   o1)
  {
  }
  error er1();
}
using L0 for uint;
using L0 for uint;
// ----
// TypeError 4103: (su0.sol:461-531): Internal type is not allowed for public or external functions.
